Add bcmath extention

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         uses: php-actions/composer@v6
         with:
           php_version: 8.1
+          php_extensions: bcmath
 
       - name: PHP Code Sniffer
         uses: php-actions/phpcs@v1
