--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 version: "3"
 services:
-  dynamo-db-adapter:
-    image: dynamo-db-adapter:dev
+  dynamodb-odm:
+    image: dynamodb-odm:dev
     build:
       context: .
       dockerfile: Dockerfile
-    env_file:
-      - ./.env.local
     environment:
       - AWS_ACCESS_KEY_ID=1
       - AWS_SECRET_ACCESS_KEY=1
@@ -23,8 +21,6 @@ services:
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
     image: "amazon/dynamodb-local:1.21.0"
     container_name: dynamodb-local
-    ports:
-      - "8011:8000"
     volumes:
       - "./docker/dynamodb:/home/dynamodblocal/data"
     working_dir: /home/dynamodblocal
