--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         uses: isbang/compose-action@v1.4.1
         with:
           compose-file: "./docker-compose.yml"
-          compose-flags: "run --no-deps dynamo-db-adapter vendor/bin/phpspec run"
+          compose-flags: "run --no-deps dynamodb-odm vendor/bin/phpspec run"
           services: |
             helloworld2
             helloworld3
