--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,10 @@ permissions:
   contents: read
 
 jobs:
-  tests:
+  code-style:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -28,6 +29,13 @@ jobs:
           php_version: 8.1
           path: src/
           standard: PSR2
+
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Build image for subsequent tests
         run: docker-compose -f docker-compose.ci.yml build
